syntax = "proto3";

service AuditLogService {
  rpc LogEvent(LogEventRequest) returns (LogEventResponse);
}

message LogEventRequest {
  string user_id = 1;
  string event_type = 2;
  string details = 3;
  int64 timestamp = 4;
}

message LogEventResponse {
  bool success = 1;
  string message = 2;
}